--- a/css/layout2.css
+++ b/css/layout2.css
@@ -30,7 +30,7 @@
 
     .margin{
         margin: 50px;
-        /*타 요소와의 간경을 상하좌우 50px 벌림*/
+        /*타 요소와의 간격을 상하좌우 50px 벌림*/
     }
 
     /*서로 다른 요소의 margin이 겹칠 경우 더 큰 margin 
